# MarketingScience-CohortMarch26

./: .gitignore  README.md  pyproject.toml  requirements.txt
capstone/: capstone_template.ipynb  capstone_template.md
data/: adstock_shiny_app.py.md  generate_synthetic_data.py  synthetic_multi_geo_data.csv
pre-course/: 00_smoke_test.ipynb  00_smoke_test.md  notebook_00_explore_dataset.ipynb  reading_04_bayesian_thinking.md
utils/: mmm_utils.py.md
week-1/offline/: notebook_01_eda.ipynb
week-1/session-1/: session_01_measurement_landscape.ipynb
week-1/session-2/: session_02_data_prep_eda.ipynb  session_02_data_prep_eda.md
week-2/offline/: demo_spend_vs_exposure.ipynb  demo_spend_vs_exposure_executed.ipynb  generate_synthetic_data.py  notebook_02_adstock_saturation.ipynb  notebook_03_pymc_basics.ipynb
week-2/session-3/: session_03_ols_mmm.ipynb
week-2/session-4/: session_04_bayesian_mmm.ipynb  session_04_bayesian_mmm.md
week-3/offline/: notebook_04_meridian_setup.ipynb  notebook_05_attribution.ipynb  notebook_05_attribution.md  notebook_07_prior_calibration.ipynb
week-3/session-5/: session_05_meridian.ipynb  session_extra_meridian.ipynb
week-3/session-6/: session_06_attribution_byod.ipynb
week-4/offline/: notebook_06_power_analysis.ipynb  notebook_06_power_analysis.md
week-4/session-7/: session_07_experimentation_geolift.ipynb
week-4/session-8/: session_08_capstone_wrapup.ipynb  session_08_prior_calibration.ipynb
