[project]
name = "cohort-mar26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arviz>=0.23.4",
    "graphviz>=0.21",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "nest-asyncio>=1.6.0",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pymc>=5.28.1",
    "pymc-marketing>=0.18.2",
    "rpy2>=3.6.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shiny>=1.5.1",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]
