[project]
name = "cohort-mar26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arviz>=0.15",
    "google-meridian>=1.0",
    "graphviz>=0.20",
    "ipywidgets>=8.0",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "matplotlib>=3.7",
    "nest-asyncio>=1.5",
    "networkx>=3.1",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pymc>=5.0",
    "pymc-marketing>=0.4",
    "rpy2>=3.5",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "seaborn>=0.12",
    "shiny>=0.6",
    "statsmodels>=0.14",
    "tqdm>=4.65",
]
